# nxweb

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  configure.ac
sample_config/: nxweb_config.json
sample_config/python2/: hello.py  nxwebpy2.py
sample_config/python3/: main.py  nxwebpy3.py
src/include/nxweb/: config.h.cmake.in  http_server.h  misc.h  nxweb.h
src/lib/: CMakeLists.txt  Makefile.am  access_log.c  daemon.c  http_server.c  http_utils.c  main_stub.c  nx_event.c
src/lib/filters/: draw_filter.c  file_cache_filter.c  image_filter.c
src/lib/modules/: python2.c  python3.c
